# napari-layer-table

./: .gitignore  404.html  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  readme-dev.md  readme-mkdocs.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  deploy_mkdocs.yml  publish.yml  release.yml  test_and_deploy.yml  tests.yml
api/_data_model/: index.html
api/_my_layer/: index.html
api/_my_widget/: index.html
api/_table_widget/: index.html
api/overview/: index.html
docs/: index.md  overview.md  readme-mkdocs.md  scripting.md
docs/api/: _data_model.md  _my_layer.md  _my_widget.md  _table_widget.md  overview.md
examples/: simpleScript.py
sandbox/: understand_events.py
scripting/: index.html
search/: search_index.json
src/napari_layer_table/: __init__.py  _data_model.py  _my_layer.py  _my_logger.py  _my_widget.py  _my_widget_0.py  _table_widget.py  _undo.py  debugInterface.py  layer-table-plugin-example.ipynb  napari.yaml  readme-events.md
src/napari_layer_table/_tests/: readme.md  test_data_model.py  test_dock_widget.py  test_layer_table_plugin.py  test_myTableView.py  test_my_logger.py  test_my_widget.py  test_pandas_model.py  test_reader.py  test_sample_data.py  test_widget.py
