[metadata]
name = napari-layer-table
version = 0.0.1
author = Robert Cudmore
author_email = rhcudmore@ucdavis.edu
url = https://github.com/mapmanager/napari-layer-table
license = GPL-3.0-only
description = A plugin to display a layer as a table.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-layer-table/issues
    Documentation = https://github.com/mapmanager/napari-layer-table#README.md
    Source Code = https://github.com/mapmanager/napari-layer-table
    User Support = https://github.com/mapmanager/napari-layer-table/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-layer-table = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-layer-table = napari_layer_table:napari.yaml

#[project]
#dependencies = 
#    mkdocstrings
#    mkdocstrings-python-legacy>=0.2,
